[gd_scene load_steps=5 format=3 uid="uid://d0tngdjysqc6w"]

[ext_resource type="Script" path="res://Scripts/DailyPuzzleMenu.gd" id="1_qwco4"]
[ext_resource type="Texture2D" uid="uid://clg3j1mrr5vu5" path="res://Sprites/Digits12.png" id="2_6mkyf"]
[ext_resource type="Script" path="res://Scripts/GameButton.gd" id="3_8oggh"]
[ext_resource type="PackedScene" uid="uid://ljkk4uw3q2yl" path="res://Scenes/Cursor.tscn" id="3_thkcu"]

[node name="DailyPuzzleMenu" type="CanvasLayer"]
script = ExtResource("1_qwco4")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.941176, 0.964706, 0.941176, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_top = 75.0
offset_right = 168.0
offset_bottom = 127.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 52
text = "Daily Puzzles"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 176.0
offset_top = 210.0
offset_right = 304.0
offset_bottom = 338.0
theme_override_constants/separation = 32

[node name="BeginnerButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_vertical = 4
text = "Beginner"

[node name="NoviceButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_vertical = 4
text = "Novice"

[node name="ExpertButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
size_flags_vertical = 4
text = "Expert "

[node name="Exit" type="TextureButton" parent="."]
modulate = Color(0.133333, 0.137255, 0.137255, 1)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_top = 26.0
offset_right = -9.0
offset_bottom = 42.0
grow_horizontal = 0
texture_normal = ExtResource("2_6mkyf")
script = ExtResource("3_8oggh")
known_number_color = Color(0.133333, 0.137255, 0.137255, 1)
guess_number_color = Color(0.2, 0.388235, 0.737255, 1)

[node name="Cursor" parent="." instance=ExtResource("3_thkcu")]
offset_left = 271.0
offset_top = 119.0
offset_right = 271.0
offset_bottom = 119.0

[connection signal="pressed" from="VBoxContainer/BeginnerButton" to="." method="_on_beginner_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NoviceButton" to="." method="_on_novice_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExpertButton" to="." method="_on_expert_button_pressed"]
[connection signal="mouse_entered" from="Exit" to="Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="Exit" method="_on_mouse_exited"]
[connection signal="pressed" from="Exit" to="Exit" method="_on_exit_pressed"]
